@@ -1,5 +1,12 @@
 2012-03-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* src/z80/ralloc2.cc,
+	  src/z80/ralloc.c,
+	  src/z80/z80.h:
+	  Remove support for using the old allocator for A, while using the new allocator for other registers.
+
+2012-03-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* src/z80/z80.h:
 	  Enabled exact cost function for gbz80.
 	* src/z80/gen.c:
